fix(template/products-carousel): update styles for new product card vertical alignment and stretch

--- a/@ecomplus/storefront-template/template/scss/components/_products-carousel.scss
+++ b/@ecomplus/storefront-template/template/scss/components/_products-carousel.scss
@@ -56,11 +56,21 @@
     @media (min-width: 992px) {
       width: 25%;
     }
+
+    > :only-child {
+      height: 100%;
+    }
   }
 
   .glide {
+    &__track {
+      display: flex;
+      align-items: stretch;
+    }
+
     &__slides {
       will-change: auto;
+      overflow: visible;
     }
 
     &:not(.glide--slider) .glide__arrows {
